--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,13 @@ heron = { version = "3.0.0", features = ["3d","collision-from-mesh"] }
 #glam = "0.13.1"
 rand = "0.8.4"
 #bevy_rapier3d = { version = "0.12.1", features = ["render"] }
-bevy-inspector-egui = "0.10.0"
+bevy-inspector-egui = "0.11.0"
 bevy_editor_pls = { git = "https://github.com/jakobhellermann/bevy_editor_pls.git" }
 bevy_embedded_assets = { version = "0.3.0", optional = true }
+#bevy_eventwork = "0.7.2"
+bevy-pigeon = "0.3.0"
+carrier-pigeon = "0.3.0"
+serde = "1"
+bevy_egui = "0.14"
+iyes_loopless = "0.5"
+thiserror = "1.0"
