--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,17 +22,17 @@ opt-level = 3
 #lto = "thin"
 
 [dependencies]
-bevy = { version = "0.7" }
+bevy = { version = "0.9" }
 #bevy = { version = "0.7", features = ["dynamic"] }
 rand = "0.8.4"
-#bevy_rapier3d = { version = "0.14.1", features = ["debug-render","serde-serialize"] }
-bevy_rapier3d = { git = "https://github.com/dimforge/bevy_rapier.git", features = ["debug-render","serde-serialize"] }
-bevy-inspector-egui = "0.11.0"
+bevy_rapier3d = { version = "0.20", features = ["debug-render","serde-serialize"] }
+#bevy_rapier3d = { git = "https://github.com/dimforge/bevy_rapier.git", features = ["debug-render","serde-serialize"] }
+bevy-inspector-egui = "0.17"
 #bevy-inspector-egui-rapier = { version = "0.3", features = ["rapier3d"] }
 #bevy_editor_pls = { git = "https://github.com/jakobhellermann/bevy_editor_pls.git" }
-bevy_embedded_assets = { version = "0.3.0", optional = true }
-bevy-pigeon = "0.3.0"
-carrier-pigeon = "0.3.0"
+bevy_embedded_assets = { version = "0.6", optional = true }
+bevy-pigeon = { git = "https://github.com/MitchellMarinoDev/bevy-pigeon" }
+carrier-pigeon = { git = "https://github.com/MitchellMarinoDev/carrier-pigeon", features = ["bevy"] }
 serde = "1"
-bevy_egui = "0.14"
-iyes_loopless = "0.5"
+bevy_egui = "0.19"
+iyes_loopless = "0.9"
