--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,9 +31,10 @@ bevy-inspector-egui = "0.17"
 #bevy-inspector-egui-rapier = { version = "0.3", features = ["rapier3d"] }
 #bevy_editor_pls = { git = "https://github.com/jakobhellermann/bevy_editor_pls.git" }
 bevy_embedded_assets = { version = "0.6", optional = true }
-bevy-pigeon = { git = "https://github.com/MitchellMarinoDev/bevy-pigeon" }
-carrier-pigeon = { git = "https://github.com/MitchellMarinoDev/carrier-pigeon", features = ["bevy"] }
 serde = "1"
 bevy_egui = "0.19"
 iyes_loopless = "0.9"
 once_cell = "1.17"
+circular-buffer = "0.1.1"
+bevy_quinnet = "0.3.0"
+bitmask-enum = "2"
