--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [features]
+headless = []
 include_assets = ["bevy_embedded_assets"]
 profiling = ["bevy/trace_chrome"]
 
