--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ profiling = ["bevy/trace_chrome"]
 # Enable only a small amount of optimization in debug mode
 [profile.dev]
 opt-level = 1
+strip = true
 
 # Enable high optimizations for dependencies (incl. Bevy), but not for our code:
 [profile.dev.package."*"]
@@ -35,5 +36,5 @@ bevy_egui = "0.27"
 once_cell = "1.17"
 bevy_quinnet = "0.7"
 bitmask-enum = "2"
-bevy_gravirollback = { path = "../gravirollback", features = ["serialize"] }
-#bevy_gravirollback = { git = "https://github.com/tomaspecl/bevy_gravirollback", rev = "89bd31ffc1be530a92a8fa8ce31ff60e75cb72b6", features = ["serialize"] }
+#bevy_gravirollback = { path = "../gravirollback", features = ["serialize"] }
+bevy_gravirollback = { git = "https://github.com/tomaspecl/bevy_gravirollback", rev = "777678946fba14d2cbaed8569960a21faec69771", features = ["serialize"] }
